Enhance index.html by adding a header with the app title and description, improving the warning box with a fade-in animation, and implementing a dynamic build tracker that fetches the latest commit hash from GitHub. Update community guidelines for clarity and remove the old static work-in-progress note.

--- a/public/index.html
+++ b/public/index.html
@@ -74,13 +74,43 @@
             opacity: 0;
             pointer-events: none;
         }
+
+        .fade-in-warning {
+            opacity: 0;
+            animation: fadeInWarn 1.2s ease 0.2s forwards;
+        }
+        @keyframes fadeInWarn {
+            from { opacity: 0; transform: translateY(-16px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
     </style>
 </head>
 
 <body class="bg-gray-50 text-gray-800">
 
+    <!-- Move App Title to Top -->
+    <header class="text-center mb-8">
+        <h1 class="text-4xl font-bold text-gray-900 mt-4 mb-1">myHealthTracker</h1>
+        <p class="text-lg text-gray-600 mb-2">Check off hospitals and ambulance trusts you've visited.</p>
+    </header>
+
     <!-- Personalized Greeting -->
-    <div id="personal-greeting" class="text-2xl font-semibold text-purple-700 text-center mt-6 mb-2"></div>
+    <div id="personal-greeting" class="text-2xl font-semibold text-purple-700 text-center mt-2 mb-2"></div>
+
+    <!-- Improved Warning Box -->
+    <div
+        class="mt-4 mb-8 max-w-3xl mx-auto flex items-start gap-4 bg-yellow-50 border-l-8 border-yellow-400 shadow-md rounded-xl p-5 fade-in-warning relative">
+        <div class="text-3xl text-yellow-500 mt-1 mr-2">⚠️</div>
+        <div>
+            <div class="font-bold text-yellow-900 text-lg mb-1">A Note for Our Community</div>
+            <div class="text-yellow-900 text-sm leading-relaxed">
+                <span class="font-semibold">Please understand: This is an unfinished and work-in-progress project.</span>
+                This is a personal project designed for the chronically ill community to find a little bit of fun and a sense of accomplishment in their health journey.
+                <span class="font-semibold">Please do not misuse health services for the purpose of checking off locations.</span>
+                Your health and the resources of the NHS are paramount.
+            </div>
+        </div>
+    </div>
 
     <!-- Full Page Loader -->
     <div id="full-page-loader"
@@ -137,7 +167,7 @@
             <div
                 class="mt-6 p-4 bg-yellow-100 border-l-4 border-yellow-500 text-yellow-800 rounded-r-lg text-left max-w-4xl mx-auto">
                 <p class="font-bold">A Note for Our Community</p>
-                <p>This is a personal project designed for the chronically ill community to find a little bit of fun and
+                <p><strong>Please understand: This is an unfinished and work-in-progress project.</strong> </n>This is a personal project designed for the chronically ill community to find a little bit of fun and
                     a sense of accomplishment in their health journey. <strong>Please do not misuse health services for
                         the purpose of checking off locations.</strong> Your health and the resources of the NHS are
                     paramount.</p>
@@ -1553,8 +1583,8 @@
                 <li>Update your profile and tracked conditions from the profile page.</li>
             </ul>
             <div class="bg-yellow-50 border-l-4 border-yellow-400 p-4 rounded">
-                <h3 class="font-semibold text-yellow-800 mb-1">A Note for Our Community</h3>
-                <p class="text-yellow-900 text-sm">This is a personal project designed for the chronically ill community to find a little bit of fun and a sense of accomplishment in their health journey. Please do not misuse health services for the purpose of checking off locations. Your health and the resources of the NHS are paramount.</p>
+                <h3 class="font-semibold text-yellow-800 mb-1">Work In Progress</h3>
+                <p class="text-yellow-900 text-sm">This is a work-in-progress project. Features and data may change. Thank you for your feedback and patience as we continue to improve the app!</p>
             </div>
             <button id="close-help-btn" class="mt-4 px-4 py-2 bg-gray-200 text-gray-700 rounded-lg hover:bg-gray-300 transition-colors">Close</button>
         </div>
@@ -1701,23 +1731,74 @@
         }
 
         // Add a build tracker to the bottom right
-        const BUILD_VERSION = 'v0.9.0'; // Update as needed
+        // Replace the old static version badge with a dynamic one
         window.addEventListener('DOMContentLoaded', () => {
+            // Remove old badges if present
+            const oldBuild = document.getElementById('build-tracker');
+            if (oldBuild) oldBuild.remove();
+            const oldWip = document.getElementById('wip-badge');
+            if (oldWip) oldWip.remove();
+            // Create a container for badges in the bottom left
+            let badgeContainer = document.getElementById('badge-container');
+            if (!badgeContainer) {
+                badgeContainer = document.createElement('div');
+                badgeContainer.id = 'badge-container';
+                badgeContainer.style.position = 'fixed';
+                badgeContainer.style.bottom = '1.5rem';
+                badgeContainer.style.left = '1.5rem';
+                badgeContainer.style.display = 'flex';
+                badgeContainer.style.flexDirection = 'row';
+                badgeContainer.style.alignItems = 'center';
+                badgeContainer.style.gap = '12px';
+                badgeContainer.style.zIndex = '9998';
+                badgeContainer.style.pointerEvents = 'none';
+                document.body.appendChild(badgeContainer);
+            }
+            // Build tracker badge (dynamic)
             const buildDiv = document.createElement('div');
             buildDiv.id = 'build-tracker';
-            buildDiv.textContent = `Build: ${BUILD_VERSION}`;
-            buildDiv.style.position = 'fixed';
-            buildDiv.style.bottom = '2.5rem';
-            buildDiv.style.right = '1.5rem';
-            buildDiv.style.opacity = '0.3';
-            buildDiv.style.fontSize = '0.85rem';
             buildDiv.style.background = '#fff';
-            buildDiv.style.padding = '2px 10px';
-            buildDiv.style.borderRadius = '8px';
-            buildDiv.style.boxShadow = '0 1px 4px rgba(0,0,0,0.04)';
-            buildDiv.style.zIndex = '9999';
-            buildDiv.style.pointerEvents = 'none';
-            document.body.appendChild(buildDiv);
+            buildDiv.style.color = '#6366f1';
+            buildDiv.style.fontWeight = '500';
+            buildDiv.style.fontSize = '1rem';
+            buildDiv.style.padding = '4px 14px';
+            buildDiv.style.borderRadius = '10px';
+            buildDiv.style.boxShadow = '0 1px 4px rgba(0,0,0,0.08)';
+            buildDiv.style.opacity = '0.92';
+            buildDiv.style.pointerEvents = 'auto';
+            buildDiv.style.cursor = 'pointer';
+            // Default fallback version
+            let fallbackVersion = 'v0.9.0';
+            buildDiv.textContent = `Build: ${fallbackVersion}`;
+            badgeContainer.appendChild(buildDiv);
+
+            // Fetch latest commit hash from GitHub API
+            fetch('https://api.github.com/repos/createdshots/ambulance-hospitaltracker/commits/main')
+                .then(res => res.ok ? res.json() : null)
+                .then(data => {
+                    if (data && data.sha) {
+                        const shortSha = data.sha.substring(0, 7);
+                        buildDiv.innerHTML = `<a href="https://github.com/createdshots/ambulance-hospitaltracker/commit/${data.sha}" target="_blank" rel="noopener" style="color:inherit;text-decoration:none;pointer-events:auto;">Build: <span style='font-family:monospace;'>${shortSha}</span></a>`;
+                    }
+                })
+                .catch(() => {
+                    // fallback, already set
+                });
+
+            // Work-in-progress badge
+            const wipBadge = document.createElement('div');
+            wipBadge.id = 'wip-badge';
+            wipBadge.innerHTML = `<span style="font-size:1.1em;vertical-align:middle;">🚧</span> <span style="vertical-align:middle;">Work in Progress</span>`;
+            wipBadge.style.background = '#fff';
+            wipBadge.style.color = '#b45309';
+            wipBadge.style.fontWeight = '500';
+            wipBadge.style.fontSize = '1rem';
+            wipBadge.style.padding = '4px 14px';
+            wipBadge.style.borderRadius = '10px';
+            wipBadge.style.boxShadow = '0 1px 4px rgba(0,0,0,0.08)';
+            wipBadge.style.opacity = '0.92';
+            wipBadge.style.pointerEvents = 'none';
+            badgeContainer.appendChild(wipBadge);
         });
 
         // Add personalized greeting to the top of the page
@@ -1732,26 +1813,6 @@
                 greetingDiv.textContent = `Hello, ${name}!`;
             }
         }
-
-        // Add a work-in-progress note at the bottom of the page
-        window.addEventListener('DOMContentLoaded', () => {
-            // ... build tracker code ...
-            const wipDiv = document.createElement('div');
-            wipDiv.id = 'wip-note';
-            wipDiv.textContent = 'This is a work-in-progress project. Features and data may change. Thank you for your feedback!';
-            wipDiv.style.position = 'fixed';
-            wipDiv.style.bottom = '0.5rem';
-            wipDiv.style.right = '1.5rem';
-            wipDiv.style.opacity = '0.25';
-            wipDiv.style.fontSize = '0.85rem';
-            wipDiv.style.background = '#fff';
-            wipDiv.style.padding = '2px 10px';
-            wipDiv.style.borderRadius = '8px';
-            wipDiv.style.boxShadow = '0 1px 4px rgba(0,0,0,0.04)';
-            wipDiv.style.zIndex = '9998';
-            wipDiv.style.pointerEvents = 'none';
-            document.body.appendChild(wipDiv);
-        });
     </script>
 </body>
 
